syntax = "proto3";
package axelar.nexus.v1beta1;
option go_package = "github.com/axelarnetwork/axelar-core/x/nexus/types";

import "gogoproto/gogo.proto";
import "axelar/nexus/v1beta1/params.proto";
import "axelar/nexus/exported/v1beta1/types.proto";
import "axelar/nexus/v1beta1/types.proto";

option (gogoproto.goproto_getters_all) = false;

// GenesisState represents the genesis state
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];

  uint64 nonce = 2;
  repeated nexus.exported.v1beta1.Chain chains = 3
      [ (gogoproto.nullable) = false ];
  repeated ChainState chain_states = 4 [ (gogoproto.nullable) = false ];
  repeated LinkedAddresses linked_addresses = 5
      [ (gogoproto.nullable) = false ];
  repeated nexus.exported.v1beta1.CrossChainTransfer transfers = 6
      [ (gogoproto.nullable) = false ];
  nexus.exported.v1beta1.TransferFee fee = 7 [ (gogoproto.nullable) = false ];
  repeated nexus.exported.v1beta1.FeeInfo fee_infos = 8
      [ (gogoproto.nullable) = false ];
}
