syntax = "proto3";
package nexus.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/nexus/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "nexus/exported/v1beta1/types.proto";

option (gogoproto.goproto_getters_all) = false;

// ChainState represents the state of a registered blockchain
message ChainState {
  nexus.exported.v1beta1.Chain chain = 1 [ (gogoproto.nullable) = false ];
  repeated bytes maintainers = 2
      [ (gogoproto.casttype) =
            "github.com/cosmos/cosmos-sdk/types.ValAddress" ];
  bool activated = 3;
  repeated cosmos.base.v1beta1.Coin total = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated string assets = 5 [ (gogoproto.nullable) = false ];
}

message LinkedAddresses {
  nexus.exported.v1beta1.CrossChainAddress deposit_address = 1
      [ (gogoproto.nullable) = false ];
  nexus.exported.v1beta1.CrossChainAddress recipient_address = 2
      [ (gogoproto.nullable) = false ];
}
